--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,11 +17,15 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+ 
+}
+
+h3{
+  font-size: 20px;
+  font-weight: bold;
+}
+
+h2{
+  font-size: 18px;
+  font-weight: bold;
 }
